--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -33,7 +33,7 @@
                 <div class="card bg-danger text-white">
                     <div class="card-body text-center">
                         <h3 id="contenedores-llenos">0</h3>
-                        <p>Llenos (>90%)</p>
+                        <p>Llenos (>75%)</p>
                     </div>
                 </div>
             </div>
@@ -41,15 +41,15 @@
                 <div class="card bg-warning text-white">
                     <div class="card-body text-center">
                         <h3 id="contenedores-medio">0</h3>
-                        <p>Medio (50-90%)</p>
+                        <p>Medio (50-75%)</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-3">
                 <div class="card bg-success text-white">
                     <div class="card-body text-center">
-                        <h3>85%</h3>
-                        <p>Eficiencia</p>
+                        <h3 id="contenedores-bajo">0</h3>
+                        <p>Bajo (<50%)</p>
                     </div>
                 </div>
             </div>
@@ -78,6 +78,7 @@
                             <tr>
                                 <th>Ubicacion</th>
                                 <th>Tipo</th>
+                                <th>Capacidad</th>
                                 <th>Nivel</th>
                                 <th>Estado</th>
                             </tr>
