--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,7 +38,7 @@
 
                 <div class="card bg-white/80 shadow-lg">
                     <div class="card-body text-center">
-                        <h5 class="card-title text-center text-dark">Contenedores</h5>
+                        <h5 class="card-title text-center text-dark">Historial contenedor</h5>
                         <p class="card-text text-center text-dark">Mira y gestiona tus contenedores</p>
                         <a class="btn btn-success" th:href="@{/contenedores}">Ir ahora</a>
                     </div>
